--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HancaHouse</string>
+
+    <string name="warn_cannot_call">전화를 할 수 없는 폰입니다.</string>
 </resources>
