--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">HancaHouse</string>
 
     <string name="warn_cannot_call">전화를 할 수 없는 폰입니다.</string>
+
+    <string name="notification_title">한카 렌트</string>
+    <string name="notification_content" formatted="false">%d개의 집이 새롭게 올라왔습니다.</string>
+
+    <string name="start_crawler">시작</string>
 </resources>
