jenkins build_number를 versionCode로 사용
App Name도 변경 함.
debug에서는 build_number가 나오도록 함. 그 외에는 그냥 기본 앱 이름 사용.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">HancaHouse</string>
+    <!-- resolve this "app_name" value in build.gradle -->
+    <!--<string name="app_name">HancaHouse</string>-->
 
     <string name="warn_cannot_call">전화를 할 수 없는 폰입니다.</string>
 
