--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,22 +19,11 @@
     <string name="dialog_hour_picker_ok">Ok</string>
     <string name="dialog_hour_picker_cancel">Cancel</string>
 
-    <!-- Alarm -->
-    <string name="toast_alarm_running">On excuting an alarm.</string>
-    <string name="toast_alarm_stopped">Closed the alarm.</string>
-    <string name="toast_alarm_start">\"자동으로 가져오기\"를 시작합니다.</string>
-    <string name="toast_alarm_stop">\"자동으로 가져오기\"를 종료합니다.</string>
-    <string name="toast_alarm_restart_formatter" formatted="false">%d 시간 간격으로 \"자동으로 가져오기\"를 재실행 합니다.</string>
-
     <!-- menu title -->
-    <string name="go_setting">설정</string>
-    <string name="start_crawler">\"자동으로 가져오기\" 시작</string>
-    <string name="stop_crawler">\"자동으로 가져오기\" 끝내기</string>
-    <string name="check_crawler">알람 확인</string>
-    <string name="delete_all_from_table">모두 삭제</string>
+    <string name="go_setting">Settings</string>
 
-    <string name="go_web_page">웹으로 보기</string>
+    <string name="go_web_page">Go web</string>
 
     <!-- House Detail -->
-    <string name="toast_no_detail_url">웹으로 보기를 실행할 수 없습니다. 종료 후 다시 실행해 주세요.</string>
+    <string name="toast_no_detail_url">Can\'t find a URL. Please quit this application and restart it.</string>
 </resources>
